# m4ri

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  kernel.cu  main.cu
src/include/: kernel.cu
src/x64/: benchmarks_x64.h  m4ri_cpu_x64.hpp  m4ri_gpu_x64.cu  tests_x64.h
src/x86/: benchmarks_x86.h  m4ri_cpu_x86.hpp  m4ri_gpu_x86.cu  tests_x86.h
